fixed overall code quality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="src/style.css">
+		<link rel="stylesheet" href="src/style/style.css">
 	</head>
 	<div id="margem_superior" >
 		<div id="left"></div>
@@ -20,7 +20,7 @@
 				<p>Inisira o número de pixels:</p>
 			</div>
 			<input id="número de pixels" type="text" >
-			<button id="sub"  onclick="get_form_value()">CALCULAR</button>
+			<button id="sub"  onclick="getFormValue()">CALCULAR</button>
 			<div id="resultado_titulo"><p>Resultado:</p></div>
 			<input id="return" type="text">
 		</div>
