--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="src/style/style.css">
 	</head>
-	<div id="margem_superior" >
-		<div id="left"></div>
-		<div id="center"></div>
-		<div id="right"></div>
-		
-	</div>
 	<body>
+		<div id="margem_superior" >
+			<div id="left"></div>
+			<a href="https://www.ucs.br/site">
+				<img height="70px" src="src/img/Logo_UCS.png">
+			</a>
+			<div id="right"></div>
+		</div>
 		<div id="form_div" >
 			<div id="Title">
 				<p>CONVERSOR DE PIXEL PARA CM:</p>
